--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.25"
+auto_impl = "0.3.0"
 byteorder = "1.3.2"
 byte_struct = "0.6.0"
 byte_struct_derive = "0.4.2"
