--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ auto_impl = "0.3.0"
 byteorder = "1.3.2"
 byte_struct = "0.6.0"
 byte_struct_derive = "0.4.2"
+clap = "2.33"
 chrono = "0.4.10"
 env_logger = "0.7.1"
 log = "0.4"
+structopt = "0.3.14"
