--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,17 @@ version = "0.1.0"
 authors = ["Miquel van Smoorenburg <mikevs@xs4all.net>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+# Include debug info in release builds.
+[profile.release]
+debug = true
+
+# Build dependencies in optimized mode, even for debug builds.
+[profile.dev.package."*"]
+opt-level = 3
+
+# Build dev-dependencies in non-optimized mode, even for release builds.
+[profile.dev.build-override]
+opt-level = 0
 
 [dependencies]
 anyhow = "1.0.25"
@@ -16,4 +26,5 @@ clap = "2.33"
 chrono = "0.4.10"
 env_logger = "0.7.1"
 log = "0.4"
+memmap = "0.7"
 structopt = "0.3.14"
