--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,4 +35,6 @@ chrono = "0.4.10"
 env_logger = "0.7.1"
 log = "0.4"
 memmap = "0.7"
+serde = { version = "1.0.114", features = [ "derive" ] }
+serde_json = "1.0"
 structopt = "0.3.14"
