--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,9 @@ clap = "2.33"
 chrono = "0.4.10"
 env_logger = "0.7.1"
 log = "0.4"
+lru = "0.6.5"
 memmap = "0.7"
+once_cell = "1.5.2"
 serde = { version = "1.0.114", features = [ "derive" ] }
 serde_json = "1.0"
 structopt = "0.3.14"
