--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,10 @@ path = "src/lib.rs"
 name = "mp4"
 path = "src/main.rs"
 
+[[bin]]
+name = "server"
+path = "src/server.rs"
+
 # Include debug info in release builds.
 [profile.release]
 debug = true
@@ -25,18 +29,27 @@ opt-level = 3
 opt-level = 0
 
 [dependencies]
+# Binaries.
 anyhow = "1.0.25"
+bytes = "1.0"
+clap = "2.33"
+env_logger = "0.7.1"
+headers = "0.3"
+http = "0.2"
+hyper = "0.14"
+structopt = "0.3.14"
+tokio = { version = "1.0", features = [ "full" ] }
+warp = "0.3"
+
+# Lib.
 auto_impl = "0.3.0"
 byteorder = "1.3.2"
 byte_struct = "0.6.0"
 byte_struct_derive = "0.4.2"
-clap = "2.33"
 chrono = "0.4.10"
-env_logger = "0.7.1"
 log = "0.4"
 lru = "0.6.5"
 memmap = "0.7"
 once_cell = "1.5.2"
 serde = { version = "1.0.114", features = [ "derive" ] }
 serde_json = "1.0"
-structopt = "0.3.14"
