--- a/mp4server/Cargo.toml
+++ b/mp4server/Cargo.toml
@@ -18,6 +18,7 @@ env_logger = "0.7.1"
 headers = "0.3"
 http = "0.2"
 hyper = "0.14"
+percent-encoding = "2.1.0"
 structopt = "0.3.14"
 tokio = { version = "1.0", features = [ "full" ] }
 warp = "0.3"
