--- a/mp4lib/Cargo.toml
+++ b/mp4lib/Cargo.toml
@@ -14,6 +14,8 @@ byteorder = "1.3.2"
 byte_struct = "0.6.0"
 byte_struct_derive = "0.4.2"
 chrono = "0.4.10"
+h264-reader = "0.4.0"
+isolang = "1.0"
 log = "0.4"
 lru = "0.6.5"
 memmap = "0.7"
