--- a/mp4lib/Cargo.toml
+++ b/mp4lib/Cargo.toml
@@ -20,5 +20,6 @@ log = "0.4"
 lru = "0.6.5"
 memmap = "0.7"
 once_cell = "1.5.2"
+scan_fmt = { version = "0.2", features = [ ] }
 serde = { version = "1.0.114", features = [ "derive" ] }
 serde_json = "1.0"
