--- a/mp4lib/Cargo.toml
+++ b/mp4lib/Cargo.toml
@@ -16,6 +16,7 @@ byte_struct_derive = "0.4.2"
 chrono = "0.4.10"
 h264-reader = "0.4.0"
 isolang = "1.0"
+libc = "0.2.87"
 log = "0.4"
 lru = "0.6.5"
 memmap = "0.7"
