--- a/mp4lib/Cargo.toml
+++ b/mp4lib/Cargo.toml
@@ -3,6 +3,7 @@ name = "mp4lib"
 version = "0.1.0"
 authors = ["Miquel van Smoorenburg <mikevs@xs4all.net>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
 
 [lib]
 name = "mp4lib"
