--- a/mp4server/Cargo.toml
+++ b/mp4server/Cargo.toml
@@ -3,6 +3,7 @@ name = "mp4server"
 version = "0.1.0"
 authors = ["Miquel van Smoorenburg <mikevs@xs4all.net>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
 
 [[bin]]
 name = "mp4server"
