--- a/mp4server/Cargo.toml
+++ b/mp4server/Cargo.toml
@@ -19,6 +19,7 @@ env_logger = "0.7.1"
 headers = "0.3"
 http = "0.2"
 hyper = "0.14"
+mime_guess = "2.0.3"
 once_cell = "1.5.2"
 percent-encoding = "2.1.0"
 regex = "1.0"
