--- a/mp4server/Cargo.toml
+++ b/mp4server/Cargo.toml
@@ -23,6 +23,7 @@ mime_guess = "2.0.3"
 once_cell = "1.5.2"
 percent-encoding = "2.1.0"
 regex = "1.0"
+serde_json = "1.0"
 structopt = "0.3.14"
 scan_fmt = { version = "0.2", features = [] }
 tokio = { version = "1.0", features = [ "full" ] }
