--- a/mp4lib/Cargo.toml
+++ b/mp4lib/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mp4lib"
 version = "0.1.0"
-authors = ["Miquel van Smoorenburg <mikevs@xs4all.net>"]
+authors = ["Miquel van Smoorenburg <mike@langeraar.net>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
 
@@ -9,20 +9,30 @@ license = "MIT OR Apache-2.0"
 name = "mp4lib"
 path = "src/lib.rs"
 
+[features]
+default = [ "http-file-server", "streaming" ]
+http-file-server = [ "streaming", "bytes", "futures-core", "headers", "http", "tokio" ]
+streaming = [ "once_cell", "percent-encoding", "scan_fmt" ]
+
 [dependencies]
 auto_impl = "0.3.0"
-byteorder = "1.3.2"
-byte_struct = "0.6.0"
-byte_struct_derive = "0.4.2"
 chrono = "0.4.10"
-h264-reader = "0.4.0"
 isolang = "1.0"
 libc = "0.2.87"
 log = "0.4"
 lru = "0.6.5"
 memmap = "0.7"
-once_cell = "1.5.2"
-percent-encoding = "2.1.0"
-scan_fmt = { version = "0.2", features = [ ] }
 serde = { version = "1.0.114", features = [ "derive" ] }
 serde_json = "1.0"
+
+# streaming
+once_cell = { version = "1.5.2", optional = true }
+percent-encoding = { version = "2.1.0", optional = true }
+scan_fmt = { version = "0.2", features = [ ], optional = true }
+
+# http-file-server
+bytes = { version = "1.1.0", optional = true }
+futures-core = { version = "0.3.19", optional = true }
+headers = { version = "0.3.4", optional = true }
+http = { version = "0.2.6", optional = true }
+tokio = { version = "1.16", features = [ "rt", "rt-multi-thread" ], optional = true }
