--- a/mp4server/Cargo.toml
+++ b/mp4server/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mp4server"
 version = "0.1.0"
-authors = ["Miquel van Smoorenburg <mikevs@xs4all.net>"]
+authors = ["Miquel van Smoorenburg <mike@langeraar.net>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
 
