--- a/mp4lib/Cargo.toml
+++ b/mp4lib/Cargo.toml
@@ -12,7 +12,7 @@ path = "src/lib.rs"
 [features]
 default = [ "http-file-server", "streaming" ]
 http-file-server = [ "streaming", "bytes", "futures-core", "headers", "http", "tokio" ]
-streaming = [ "once_cell", "percent-encoding", "scan_fmt" ]
+streaming = [ "ambassador", "mime_guess", "once_cell", "percent-encoding", "scan_fmt" ]
 
 [dependencies]
 auto_impl = "0.3.0"
@@ -26,6 +26,8 @@ serde = { version = "1.0.114", features = [ "derive" ] }
 serde_json = "1.0"
 
 # streaming
+ambassador = { version = "0.2.1", optional = true }
+mime_guess = { version = "2.0.3", optional = true }
 once_cell = { version = "1.5.2", optional = true }
 percent-encoding = { version = "2.1.0", optional = true }
 scan_fmt = { version = "0.2", features = [ ], optional = true }
