--- a/mp4server/Cargo.toml
+++ b/mp4server/Cargo.toml
@@ -13,18 +13,22 @@ path = "src/main.rs"
 mp4lib = { version = "0.1", path = "../mp4lib" }
 
 anyhow = "1.0.25"
+axum = "0.4.5"
 bytes = "1.0"
 clap = "2.33"
 env_logger = "0.7.1"
 headers = "0.3"
 http = "0.2"
-hyper = "0.14"
-mime_guess = "2.0.3"
+# mime_guess = "2.0.3"
 once_cell = "1.8.0"
-percent-encoding = "2.1.0"
+# percent-encoding = "2.1.0"
 regex = "1.0"
+serde = { version = "1.0.114", features = [ "derive" ] }
 serde_json = "1.0"
 structopt = "0.3.14"
-scan_fmt = { version = "0.2", features = [] }
+# scan_fmt = { version = "0.2", features = [] }
 tokio = { version = "1.0", features = [ "full" ] }
-warp = "0.3"
+tower = { version = "0.4.11", features = [ "filter" ] }
+tower-http = { version = "0.2.1", features = [ "trace", "cors" ] }
+tracing = "0.1"
+tracing-subscriber = { version="0.3", features = ["env-filter"] }
