--- a/mp4server/Cargo.toml
+++ b/mp4server/Cargo.toml
@@ -19,14 +19,13 @@ clap = "2.33"
 env_logger = "0.7.1"
 headers = "0.3"
 http = "0.2"
-# mime_guess = "2.0.3"
+http-body = "0.4.4"
 once_cell = "1.8.0"
-# percent-encoding = "2.1.0"
 regex = "1.0"
 serde = { version = "1.0.114", features = [ "derive" ] }
 serde_json = "1.0"
 structopt = "0.3.14"
-# scan_fmt = { version = "0.2", features = [] }
+time = { version = "0.3.7", features = [ "local-offset" ] }
 tokio = { version = "1.0", features = [ "full" ] }
 tower = { version = "0.4.11", features = [ "filter" ] }
 tower-http = { version = "0.2.1", features = [ "trace", "cors" ] }
