--- a/mp4server/Cargo.toml
+++ b/mp4server/Cargo.toml
@@ -13,7 +13,7 @@ path = "src/main.rs"
 mp4lib = { version = "0.1", features = [ "axum-box-body"], path = "../mp4lib" }
 
 anyhow = "1.0.25"
-axum = "0.4.5"
+axum = "0.5.4"
 bytes = "1.0"
 clap = "2.33"
 env_logger = "0.7.1"
@@ -27,7 +27,7 @@ serde_json = "1.0"
 structopt = "0.3.14"
 time = { version = "0.3.7", features = [ "local-offset" ] }
 tokio = { version = "1.0", features = [ "full" ] }
-tower = { version = "0.4.11", features = [ "filter" ] }
-tower-http = { version = "0.2.1", features = [ "trace", "cors" ] }
+tower = { version = "0.4.12", features = [ "filter" ] }
+tower-http = { version = "0.3.2", features = [ "trace", "cors", "compression-gzip", "compression-deflate" ] }
 tracing = "0.1"
 tracing-subscriber = { version="0.3", features = ["env-filter"] }
