--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,11 +1,11 @@
-unstable_features = true
-
 edition = "2018"
-binop_separator = "Back"
-blank_lines_upper_bound = 3
-enum_discrim_align_threshold = 20
-force_multiline_blocks = true
 match_block_trailing_comma = true
 max_width = 110
-struct_field_align_threshold = 20
-wrap_comments = false
+
+#unstable_features = true
+#binop_separator = "Back"
+#blank_lines_upper_bound = 3
+#enum_discrim_align_threshold = 20
+#force_multiline_blocks = true
+#struct_field_align_threshold = 20
+#wrap_comments = false
