--- a/mp4lib/Cargo.toml
+++ b/mp4lib/Cargo.toml
@@ -15,7 +15,10 @@ http-handler = [
     "streaming", "bytes", "futures-core", "headers",
     "http", "http-body", "regex", "tokio"
 ]
-streaming = [ "mime_guess", "once_cell", "percent-encoding", "scan_fmt" ]
+streaming = [
+	"mime_guess", "once_cell", "percent-encoding", "scan_fmt",
+	"chardetng", "encoding_rs", "whatlang"
+]
 axum-box-body = [ "axum" ]
 hyper-body = [ "hyper" ]
 
@@ -36,6 +39,9 @@ mime_guess = { version = "2.0.3", optional = true }
 once_cell = { version = "1.5.2", optional = true }
 percent-encoding = { version = "2.1.0", optional = true }
 scan_fmt = { version = "0.2", features = [ ], optional = true }
+whatlang = { version = "0.16.2", optional = true }
+chardetng = { version = "0.1.17", optional = true }
+encoding_rs = { version = "0.8.13", optional = true }
 
 # http-file-server
 bytes = { version = "1.1.0", optional = true }
